objects/CMPL123CME__Investigation_Items__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Checkbox_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Completed__c</fullName>
        <label>Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_Value__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Datetime_Value__c</fullName>
        <label>Datetime Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Decision_Level__c</fullName>
        <description>To maintain the internal order of saving the Investigations.</description>
        <label>Decision Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Field_Type__c</fullName>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigation_Comment_Required_Options__c</fullName>
        <label>Investigation Comment Required Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigation_Step_Description__c</fullName>
        <label>Step Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigation_Template_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigation Template Item</label>
        <referenceTo>CMPL123CME__Investigation_Template_Item__c</referenceTo>
        <relationshipLabel>Investigation Items</relationshipLabel>
        <relationshipName>Investigation_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigation__c</fullName>
        <label>Parent Investigation</label>
        <referenceTo>CMPL123CME__Investigation__c</referenceTo>
        <relationshipLabel>Investigation Items</relationshipLabel>
        <relationshipName>Investigation_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Number_Value__c</fullName>
        <label>Number Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Row_No__c</fullName>
        <label>Row No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Score__c</fullName>
        <formula>IF( ISPICKVAL( CMPL123CME__Completed__c , 'N/A') || ISPICKVAL(CMPL123CME__Completed__c , 'No') || ISBLANK( TEXT(CMPL123CME__Completed__c) ) , CMPL123CME__Weight__c * 0, CMPL123CME__Weight__c *1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Investigation Items</label>
    <nameField>
        <displayFormat>II-{00000}</displayFormat>
        <label>Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigation Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_edit_when_Inv_is_pending_approval</fullName>
        <active>true</active>
        <errorConditionFormula>CMPL123CME__Investigation__r.CMPL123_WF_Status__c ='Pending Approval'</errorConditionFormula>
        <errorMessage>Cannot edit when Investigation is in Pending Approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_edit_when_Investigation_is_closed</fullName>
        <active>true</active>
        <errorConditionFormula>CMPL123CME__Investigation__r.CMPL123_WF_Status__c ='Closed - Done'</errorConditionFormula>
        <errorMessage>Cannot edit, Investigation is Closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Do_nott_change_Investigation</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( CMPL123CME__Completed__c)</errorConditionFormula>
        <errorMessage>You cannot change investigation Completed Value</errorMessage>
    </validationRules>
</CustomObject>